[project]
name = "woven-tools"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Federico Maria Morrone", email = "contact@morrone.dev" }]
dependencies = ["httpx>=0.27.0", "rich>=13.7.1"]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
sources = "tools.sources:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tools"]
