[project]
name = "woven-enviroment"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Federico Maria Morrone", email = "contact@morrone.dev" }]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.1",
    "mako>=1.3.2",
    "packaging>=24.0",
]
readme = "README.md"
requires-python = ">= 3.12"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
woven-sources = "tools.sources:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tools"]
