[package]
name = "init_impl"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
origin = { version = "0.12.0", default-features = false, features = [
    "origin-program",
    "origin-signal",
    "origin-start",
] }
rustix = { version = "0.38.10", default-features = false, features = [
    "process",
    "stdio",
    "runtime",
] }
