[package]
name = "system"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
rustix = { version = "0.38.13", default-features = false, features = [
    "process",
    "stdio",
    "runtime",
    "system",
    "thread",
] }

[[bin]]
name = "init"
path = "src/init.rs"

[[bin]]
name = "uname"
path = "src/uname.rs"

[[bin]]
name = "clear"
path = "src/clear.rs"
