[package]
name = "system"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
rustix = { version = "0.38.31", git = "https://github.com/morr0ne/rustix.git", branch = "mount2", default-features = false, features = [
    "mount",
    "process",
    "stdio",
    "runtime",
    "system",
    "thread",
    "fs",
] }

[[bin]]
name = "init"
path = "src/init.rs"

[[bin]]
name = "raminit"
path = "src/raminit.rs"


[[bin]]
name = "uname"
path = "src/uname.rs"

[[bin]]
name = "clear"
path = "src/clear.rs"
