[package]
name = "woven-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "woven-sources"
path = "src/sources.rs"

[[bin]]
name = "woven-configs"
path = "src/configs.rs"

[dependencies]
anyhow = "1.0.81"
blake3 = "1.5.1"
bzip2 = "0.4.4"
camino = { version = "1.1.6", features = ["serde"] }
flate2 = "1.0.28"
indexmap = { version = "2.2.5", features = ["serde"] }
indicatif = "0.17.8"
regex = "1.10.3"
reqwest = "0.11.26"
serde = { version = "1.0.197", features = ["derive"] }
tar = "0.4.40"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utf8-chars = "3.0.2"
xz2 = "0.1.7"
